# astar-frame

./: .gitignore  Cargo.toml  HEADER-APACHE2  LICENSE-APACHE2  LICENSE.md  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/license-check/: config.json  license-check-config.json
.github/license-check/headers/: HEADER-APACHE2  HEADER-POLYFORM1
.github/workflows/: checks-and-tests.yml  fmt.yml  integration.yml  static-analysis.yml
binary-interface/: Cargo.toml  expanded.rs
binary-interface/src/: evm_precompile.rs  evm_precompile.sol  lib.rs  parity_wasm.rs  primitives.rs  xvm.rs
chain-extensions/crypto/: Cargo.toml
chain-extensions/crypto/src/: lib.rs
chain-extensions/dapps-staking/: Cargo.toml
chain-extensions/dapps-staking/src/: lib.rs
chain-extensions/impls/dapps-staking/: Cargo.toml
chain-extensions/impls/xvm/: Cargo.toml
chain-extensions/nomination-pool-staking/: Cargo.toml
chain-extensions/nomination-pool-staking/src/: lib.rs
chain-extensions/pallet-assets/: Cargo.toml
chain-extensions/pallet-assets/src/: lib.rs  mock.rs  tests.rs  weights.rs
chain-extensions/pallet-assets/test-contract/: asset_wrapper.json  asset_wrapper.wasm
chain-extensions/pallet-scheduler/: Cargo.toml
chain-extensions/pallet-scheduler/src/: lib.rs  mock.rs  tests.rs  weights.rs
chain-extensions/pallet-scheduler/test-contract/: scheduler_example.json  scheduler_example.wasm
chain-extensions/rmrk/: Cargo.toml
chain-extensions/rmrk/src/: lib.rs
chain-extensions/signing/: Cargo.toml
chain-extensions/signing/src/: lib.rs
chain-extensions/trait/: Cargo.toml
chain-extensions/trait/src/: lib.rs
chain-extensions/types/assets/: Cargo.toml
chain-extensions/uniques/: Cargo.toml
chain-extensions/xvm/: Cargo.toml
chain-extensions/xvm/src/: lib.rs
chainextensions/balances/: Cargo.toml
chainextensions/dapps-staking/: Cargo.toml
chainextensions/dapps-staking/fixtures/: staking_example.wat
chainextensions/dapps-staking/impl/: Cargo.toml
chainextensions/dapps-staking/impl/src/: lib.rs
chainextensions/dapps-staking/src/: extension_traits.rs  lib.rs  test.rs
chainextensions/dapps-staking/traits/: Cargo.toml
chainextensions/dapps-staking/traits/src/: lib.rs
chainextensions/dapps-staking/types/: Cargo.toml
chainextensions/dapps-staking/types/src/: lib.rs
chainextensions/traits/: Cargo.toml
chainextensions/types/: Cargo.toml
chainextensions/types/src/: lib.rs
contracts/xvm/: Cargo.toml
contracts/xvm/src/: lib.rs
examples/assets-erc20/: Burrito.sol  README.md  XcBurrito.sol
frame/asset-manager/: Cargo.toml
frame/block-reward/: Cargo.toml
frame/block-reward/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
frame/collator-selection/: Cargo.toml
frame/collator-selection/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
frame/contracts-migration/: Cargo.toml
frame/custom-signatures/: Cargo.toml
frame/custom-signatures/src/: ethereum.rs  lib.rs  tests.rs
frame/dapp-staking-v3/: Cargo.toml
frame/dapps-staking/: Cargo.toml  README.md
frame/dapps-staking-v3/: Cargo.toml
frame/dapps-staking/src/: benchmarking.rs  fix.rs  lib.rs  migrations.rs  mock.rs  testing_utils.rs  tests.rs  tests_lib.rs  weights.rs
frame/dapps-staking/src/pallet/: Readme.md  mod.rs
frame/nomination-pool-staking/: Cargo.toml
frame/pallet-account/: Cargo.toml
frame/pallet-account/src/: benchmarking.rs  lib.rs  mock.rs  origins.rs  tests.rs  weights.rs
frame/pallet-account/src/pallet/: mod.rs
frame/pallet-xcm/: Cargo.toml
frame/pallet-xcm-transactor/: Cargo.toml  README.md
frame/pallet-xcm-transactor/contract-examples/basic-flip/: Cargo.toml  lib.rs
frame/pallet-xcm-transactor/contracts-example/: Cargo.toml  lib.rs  sdk.rs
frame/pallet-xcm-transactor/ink-sdk/: Cargo.toml  README.md  lib.rs
frame/pallet-xcm-transactor/primitives/: Cargo.toml
frame/pallet-xcm-transactor/primitives/src/: lib.rs
frame/pallet-xcm-transactor/src/: benchmarking.rs  chain_extension.rs  lib.rs  mock.rs  traits.rs  weights.rs
frame/pallet-xcm-transactor/src/chain_extension/: mod.rs  weights.rs
frame/pallet-xcm-transactor/xcm-simulator/: Cargo.toml  build.rs
frame/pallet-xcm-transactor/xcm-simulator/fixtures/: README.md
frame/pallet-xcm-transactor/xcm-simulator/src/: lib.rs
frame/pallet-xcm-transactor/xcm-simulator/src/mocks/: mod.rs  parachain.rs  relay_chain.rs
frame/pallet-xcm/src/: lib.rs  mock.rs  tests.rs
frame/pallet-xvm/: Cargo.toml
frame/pallet-xvm/src/: evm.rs  lib.rs  wasm.rs
frame/pallet-xvm/src/pallet/: mod.rs
frame/reward-distribution/: Cargo.toml
frame/vesting/: Cargo.toml
frame/vesting/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  vesting_info.rs
frame/xc-asset-config/: Cargo.toml
frame/xc-asset-config/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
frame/xvm/: Cargo.toml
frame/xvm/src/: evm.rs  lib.rs
frame/xvm/src/pallet/: mod.rs
precompiles/assets-erc20/: Cargo.toml  ERC20.sol
precompiles/dapps-staking/: Cargo.toml  DappsStaking.sol
precompiles/dapps-staking/src/: lib.rs  mock.rs  tests.rs  utils.rs
precompiles/sr25519/: Cargo.toml  SR25519.sol
precompiles/sr25519/src/: lib.rs  mock.rs  tests.rs
precompiles/staking/: Cargo.toml
precompiles/substrate-ecdsa/: Cargo.toml  SubstrateEcdsa.sol
precompiles/substrate-ecdsa/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: bytes.rs  data.rs  lib.rs  testing.rs  tests.rs  xcm.rs
precompiles/utils/src/data/: xcm.rs
precompiles/xcm/: Cargo.toml  XCM.sol  Xtokens.sol
precompiles/xcm/src/: lib.rs  mock.rs  tests.rs
precompiles/xtokens/: Cargo.toml
precompiles/xvm/: Cargo.toml  XVM.sol
precompiles/xvm/evm_sdk/: XVM.sol
precompiles/xvm/src/: lib.rs  mock.rs  tests.rs
primitives/xcm/: Cargo.toml
primitives/xvm/: Cargo.toml
scripts/: make-tags.sh
(+42 files in other folders)
