[workspace]
members = [
	"chain-extensions/dapps-staking",
	"chain-extensions/xvm",
	"chain-extensions/types/*",
	"frame/block-reward",
	"frame/collator-selection",
	"frame/custom-signatures",
	"frame/dapps-staking",
	"frame/pallet-xcm",
	"frame/pallet-xvm",
	"frame/xc-asset-config",
	"frame/contracts-migration",
	"primitives/xcm",
	"precompiles/assets-erc20",
	"precompiles/dapps-staking",
	"precompiles/substrate-ecdsa",
	"precompiles/sr25519",
	"precompiles/utils",
	"precompiles/xcm",
	"precompiles/xvm",
	"vendor/evm-tracing",
	"vendor/rpc/debug",
	"vendor/rpc/trace",
	"vendor/rpc/txpool",
	"vendor/runtime/evm_tracer",
]

[workspace.package]
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"

[workspace.dependencies]
# General deps
log = "0.4.16"
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8.5" }
assert_matches = "1.3.0"
hex-literal = "0.3.4"
hex = { version = "0.4" }
libsecp256k1 = "0.7.0"
impl-trait-for-tuples = "0.2"
num_enum = { version = "0.5.3" }
slices = "0.2.0"
derive_more = { version = "0.99" }
sha3 = "0.10.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }
similar-asserts = { version = "1.1.0" }
environmental = { version = "1.1.2" }
futures = { version = "0.3.1" }
rlp = "0.5"
tokio = { version = "1.10" }
tracing = "0.1.34"

# Encoding
serde = { version = "1.0.136" }
serde_json = { version = "1.0" }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.3.0", default-features = false }

# EVM & Ethereum
evm = { version = "0.37.0" }
ethereum-types = { version = "0.14" }
ethereum = { version = "0.14.0" }
evm-gasometer = { version = "0.37.0" }
evm-runtime = { version = "0.37.0" }

# jsonrpsee
jsonrpsee = { version = "0.16.2" }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37', default-features = false }

# Substrate pallets
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }

# Frontier
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37", default-features = false }

fp-rpc = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37" }
fc-rpc-core = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37" }
fc-rpc = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37" }
fc-consensus = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37" }
fc-db = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37" }

pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.37", default-features = false, features = ["forbid-evm-reentrancy"] }

# Moonbeam EVM Tracing
evm-tracing-events = { path = "./vendor/primitives/evm-tracing-events" }
moonbeam-rpc-primitives-debug = { path = "./vendor/primitives/debug" }
moonbeam-primitives-ext = { path = "./vendor/runtime/ext" }
moonbeam-client-evm-tracing = { path = "./vendor/evm-tracing" }
moonbeam-rpc-core-types = { path = "./vendor/rpc-core/types" }
moonbeam-rpc-core-txpool = { path = "./vendor/rpc-core/txpool" }
moonbeam-rpc-primitives-txpool = { path = "./vendor/primitives/txpool" }
moonbeam-rpc-core-trace = { path = "./vendor/rpc-core/trace" }
moonbeam-rpc-core-debug = { path = "./vendor/rpc-core/debug" }

# Local deps
pallet-dapps-staking = { path = "./frame/dapps-staking", default-features = false }
pallet-xvm = { path = "./frame/pallet-xvm", default-features = false }
pallet-xcm = { path = "./frame/pallet-xcm", default-features = false }
pallet-xc-asset-config = { path = "./frame/xc-asset-config", default-features = false }

dapps-staking-chain-extension-types = { path = "./chain-extensions/types/dapps-staking", default-features = false }
xvm-chain-extension-types = { path = "./chain-extensions/types/xvm", default-features = false }

pallet-evm-precompile-assets-erc20 = { path = "./precompiles/assets-erc20" }

precompile-utils = { path = "./precompiles/utils", default-features = false }
precompile-utils-macro = { path = "./precompiles/utils/macro" }
