[workspace]
members = [
	"chain-extensions/dapps-staking",
	"chain-extensions/pallet-assets",
	# "chain-extensions/rmrk",
	"chain-extensions/xvm",
	"chain-extensions/types/*",
	"frame/block-reward",
	"frame/collator-selection",
	"frame/custom-signatures",
	"frame/dapps-staking",
	"frame/pallet-xcm",
	"frame/pallet-xvm",
	"frame/xc-asset-config",
	"frame/contracts-migration",
	"primitives/xcm",
	"precompiles/assets-erc20",
	"precompiles/dapps-staking",
	"precompiles/substrate-ecdsa",
	"precompiles/sr25519",
	"precompiles/utils",
	"precompiles/xcm",
	"precompiles/xvm",
	"vendor/evm-tracing",
	"vendor/rpc/debug",
	"vendor/rpc/trace",
	"vendor/rpc/txpool",
	"vendor/runtime/evm_tracer",
]
