[package]
name = "xvm-chain-extension-contract"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "Chain extension for X-VM calls"

[dependencies]
ink_env = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

xvm-chain-extension-types = { path = "../../chain-extensions/types/xvm", default-features = false }

[lib]
name = "xvm_chain_extension_contract"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
	"ink_metadata/std",
	"ink_env/std",
	"ink_storage/std",
	"ink_primitives/std",
	"scale/std",
	"scale-info/std",
	"xvm-chain-extension-types/std",
]
ink-as-dependency = []
