[package]
name = "pallet-block-reward"
version = "2.2.2"
license = "Apache-2.0"
description = "FRAME pallet for managing block reward issuance & distribution"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"], package = "parity-scale-codec" }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"scale-info/std",
	"sp-std/std",
	"serde/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-core",
]
try-runtime = ["frame-support/try-runtime"]
